app/assets/stylesheets/album-form.css
.album-form-box {
  background-color: #ffffff;
  width: 100%;
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
  height: 800px;
  color: rgb(0,161,198);
  border: 1px solid rgba(0,0,0,.1);
  border-top: 1px solid #ffffff;
  box-shadow: 0 -1px 0 #ffffff;
}

.album-form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-family: "Roboto", sans-serif;
  color: #363636;
}

.album-form-art {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

.album-input-art {
  width: 232px;
  height: 232px;
  margin-left: 30px;
  margin-top: 31px;
}

.album-form-title {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  margin-left: 18px;
}

.album-input-title {
  width: 232px;
  font-weight: 500;
}

.album-form button {
  width: 232px;
  color: white;
  margin-left: 30px;
}

.album-art-preview {
  width: 232px;
  height: 232px;
  margin-left: 30px;
  margin-top: 31px;
  position: absolute;
}

.search-input {
  width: 222px;
  height: 21px;
  font-size: 13px;
  padding: 0 21px 0 3px;
  text-align: center;
  background-color: #e0e0e0;
  border: 1px solid #e0e0e0;
  border-radius: 3px;
  outline: none;
  margin: 11px;
  margin-left: 67px;
}

.search-input:focus {
  background-color: #eef2f3;
  border: 1px solid #bebebe;
  text-align: left;
  left: -100px;
}

